Fixed header text truncating. Added streamline branding to each page. Gold app complete.

--- a/Week4/Gold/css/styles.css
+++ b/Week4/Gold/css/styles.css
@@ -8,11 +8,6 @@ Term: 1208
 /* Code is in logical order based on the addItem.html page */
 /* Section comments indicate where the selectors come from even though the style applies to all elements on the page(s) in which the stylesheet is linked */
 
-/* everything on both the index.html and addItem.html page is styled with the properties below*/
-*{
-	font-family: Arial, Helvetica, serif;
-}
-
 /* body element on both the index.html and addItem.hmtl page */
 body{
 	background: url(../images/backgroundLines.png);
@@ -23,6 +18,21 @@ body{
 
 #covers .ui-grid-b{
 	text-align: center;
+}
+
+.logo {
+	float: left;
+	display:inline;
+}
+
+.override {
+	overflow-x: visible;
+}
+
+.ui-header .ui-title {
+	margin-left: 1em; 
+	margin-right: 1em; 
+
 }
 
 #inputHint{
